--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -151,7 +151,7 @@
         "\n",
         "california_housing_dataframe"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,11 +375,7 @@
       "metadata": {
         "id": "kPSqspaqIYHg",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "e804a2a8-8a55-4266-e6b4-67f84c546617"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -425,7 +421,7 @@
         "    california_housing_dataframe[\"median_house_value\"] > 265000).astype(float)\n",
         "  return output_targets"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -459,7 +455,7 @@
         "print \"Validation targets summary:\"\n",
         "display.display(validation_targets.describe())"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,11 +980,7 @@
       "metadata": {
         "id": "smmUYRDtWOV_",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "6810a5fc-c530-4cfb-a64a-0026b9553fe7"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -1003,18 +995,14 @@
         "  return set([tf.feature_column.numeric_column(my_feature)\n",
         "              for my_feature in input_features])"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
         "id": "B5OwSrr1yIKD",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "27782cb0-e549-4e36-e952-3b59b6458a52"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -1046,18 +1034,14 @@
         "    features, labels = ds.make_one_shot_iterator().get_next()\n",
         "    return features, labels"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
         "id": "SE2-hq8PIYHz",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "291e9bae-5256-4472-91e4-e3675d4dfcde"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -1159,7 +1143,7 @@
         "\n",
         "  return linear_regressor"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": []
     },
     {
@@ -1183,7 +1167,7 @@
         "    validation_examples=validation_examples,\n",
         "    validation_targets=validation_targets)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
